# apple-health-ai-bridge

./: .gitignore  .public-release-denylist.local.example  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  build-constraints.txt  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  setup_feedback.md  setup_feedback.yml
.github/policies/: privacy-and-no-medical-claims.md
.github/release/: app-review-notes-template.md  criteria.md  notes-v1.0.0.md  notes-v1.0.1.md  testflight-checklist.md
.github/workflows/: ios.yml  python.yml  release.yml
assets/brand/: README.md  health-bridge-lockup.html  health-bridge-social-card.html
docs/: agent-assisted-setup.md  architecture.md  brand.md  contribution-ideas.md  maintainer-guide.md  pairing.md  roadmap.md  self-build.md  setup.md  supported-health-data.md
docs/maintainers/: testflight-readiness.md
docs/qa/: public-release-qa.md
docs/reference/: batch-v1.md  sqlite-v1.md
fixtures/: README.md  health_bridge_batch_v1.apple-health-smoke.json  health_bridge_batch_v1.synthetic.json  health_bridge_batch_v1.synthetic.ndjson
ios/HealthBridgeCompanion/: Package.swift
schemas/: health_bridge.batch.v1.schema.json
scripts/: README.md  ios-device-build-local.command  ios-device-build.sh  ios-device-install.sh  ios-device-launch.sh  ios-device-local.env.example  ios-device-run-local.command  ios-device-run.sh  ios-device-status.sh  package-smoke.py  public-release-audit.py  release_tools.py  validate-fresh-device-evidence.py
src/health_bridge/: __init__.py  cli.py  cli_dev.py  cli_mcp.py  cli_query.py  cli_receiver.py  cli_setup.py  dev_validation.py  ingest.py  private_files.py  status.py  timeseries_catalog.py
tests/: fixture_helpers.py  test_private_files.py  test_timeseries_alias_compat.py  test_timeseries_catalog.py
tests/cli/: test_cli_commands.py  test_dev_anchored_step_validation_cli.py  test_dev_device_session_cli.py  test_query_cli.py  test_receiver_cli.py  test_setup_cli.py
tests/contract/: test_batch_v1.py  test_public_schema.py
tests/guardrails/: test_brand_assets.py  test_ci_workflows.py  test_fresh_device_evidence.py  test_governance_surfaces.py  test_ios_app_privacy.py  test_ios_connection_terminal_barrier.py  test_ios_outbox_coordination.py  test_ios_receiver_catalog_parity.py  test_ios_sleep_durability.py  test_ios_unified_sync_coverage.py  test_packaging_guardrails.py  test_public_language.py  test_public_release_artifacts.py  test_public_release_audit.py  test_release_management.py
tests/ingest/: test_body_mass_weight_compat.py  test_fixture_ingest.py
tools/: generate_brand_assets.py
(+101 files in other folders)
